# mars-reconnaissance-orbiter

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/source/: conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst  tutorial.rst
docs/source/modules/: hsimars.rst  modules.rst
notebooks/: exploratory_data_analysis.ipynb  hsi_hymars.ipynb  hsimars.ipynb
src/hsimars/: __init__.py  hsi.py
tests/: conftest.py  hsi_test.py
